# MIA_1S2026_P2_-202404730-

./: README.md
CONT/: NAME.txt
aws/: s3_deploy.md
backend/: CMakeLists.txt
backend/src/: main.cpp  structs.h
backend/src/comandos/discos/: fdisk.cpp  fdisk.h  mkdisk.cpp  mkdisk.h  rmdisk.cpp  rmdisk.h  unmount.cpp  unmount.h
backend/src/comandos/filesystem/: cat.cpp  cat.h  copy.cpp  copy.h  find.cpp  find.h  mkdir.cpp  mkdir.h  mkfile.cpp  mkfile.h  mkfs.cpp  mkfs.h  move.cpp  move.h  remove.cpp  remove.h  rename.cpp  rename.h
backend/src/comandos/journaling/: journaling.cpp  journaling.h  loss.cpp  loss.h
backend/src/comandos/reportes/: block.cpp  block.h  bm_block.cpp  bm_block.h  bm_inode.cpp  bm_inode.h  file.cpp  file.h  inode.cpp  inode.h  ls.cpp  ls.h  rep.cpp  rep.h  sb.cpp  sb.h  tree.cpp  tree.h
backend/src/comandos/usuarios/: chgrp.cpp  chgrp.h  chmod.cpp  chmod.h  chown.cpp  chown.h  login.cpp  login.h  logout.cpp  logout.h  mkgrp.cpp  mkgrp.h  mkusr.cpp  mkusr.h  rmgrp.cpp  rmgrp.h  rmusr.cpp  rmusr.h
backend/src/session/: session.cpp  session.h
backend/src/utils/: parser.cpp  parser.h
frontend/: package-lock.json
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
frontend/src/app/componentes/consola/: consola.component.css  consola.component.html  consola.component.ts
frontend/src/app/componentes/disk-selector/: disk-selector.component.css  disk-selector.component.html  disk-selector.component.ts
frontend/src/app/context/: AuthContext.ts
frontend/src/app/servicios/: backend.service.ts
(+17 files in other folders)
